# sokoban

./: README.md  buildozer.spec  config.py  game.py  levels.py  main.py  objects.py  player.py  pyproject.toml  renderer.py  requirements.txt  shaders.py  utils.py
.github/workflows/: main.yml
assets/: text.py
scenes/: __init__.py  chooserscene.py  gamepixelscene.py  gamescene.py  menuscene.py  scene.py
screenshots/: gameplay.mkv
